fix for display on small screen again

--- a/UFO-Level-1-and-2/static/css/style.css
+++ b/UFO-Level-1-and-2/static/css/style.css
@@ -77,7 +77,7 @@ h1 {
 
 #table-comment{width: 50%}
 
-  #selectDate, #selectCity, #selectCountry, #selectState, #selectShape, #datetime-form-input {
+  #selectDate, #selectCity, #selectCountry, #selectState, #selectShape, #datetime-form-input, #selectAll {
       background-color: lightblue;
       color: black;
       margin: 5px;
